feat(datepicker): add datepicker initialization for fzDate field
Initialize datepicker for fzDate input field with same configuration as others
Also update translation key for fuehrungszeugnis checkbox

--- a/packages/leseohren/Resources/Private/Partials/Person/AccordionRight.html
+++ b/packages/leseohren/Resources/Private/Partials/Person/AccordionRight.html
@@ -451,7 +451,7 @@
                         <f:form.checkbox property="fuehrungszeugnisChecked" id="fzChecked" class="form-check-input"
                             value="1" uncheckedValue="0" checked="{person.fuehrungszeugnisChecked}" />
                         <label class="form-check-label" for="fzChecked">
-                            <f:translate key="tx_leseohren_domain_model_person.fuehrungszeugnis_checked" />
+                            <f:translate key="tx_leseohren.fuehrungszeugnis.checked" />
                         </label>
                     </div>
                     <div class="mb-3">
