--- a/packages/leseohren/Resources/Private/Scss/Main.entry.scss
+++ b/packages/leseohren/Resources/Private/Scss/Main.entry.scss
@@ -41,6 +41,7 @@
 //
 @import "components/buttons";
 @import "components/modals";
+@import "components/tables";
 //@import "components/links";
 
 //
