--- a/packages/leseohren/Resources/Private/Templates/Person/List.html
+++ b/packages/leseohren/Resources/Private/Templates/Person/List.html
@@ -18,10 +18,7 @@
         <thead>
             <tr>
                 <th>
-                    <f:translate key="tx_leseohren_domain_model_person.lastname" />
-                </th>
-                <th>
-                    <f:translate key="tx_leseohren_domain_model_person.firstname" />
+                    <f:translate key="tx_leseohren_domain_model_person.name" />
                 </th>
                 <th>Kategorien</th>
                 <th>
@@ -34,7 +31,6 @@
                     <f:translate key="tx_leseohren_domain_model_person.email" />
                 </th>
                 <th>Telefon</th>
-                <th>Liest in</th>
                 <th>Organisation Kategorien</th>
                 <th class="dt-head-center">FZ</th>
                 <th class="dt-head-center">Aktionen</th>
@@ -44,10 +40,16 @@
             <f:for each="{people}" as="person" iteration="personIterator">
                 <tr>
                     <td>
-                        <f:link.action action="show" arguments="{person : person}">{person.lastname}</f:link.action>
-                    </td>
-                    <td>
-                        <f:link.action action="show" arguments="{person : person}">{person.firstname}</f:link.action>
+                        <f:link.action action="show" arguments="{person : person}">
+                            <f:if condition="{person.lastname}">
+                                <f:then>
+                                    {person.lastname}<f:if condition="{person.firstname}">, {person.firstname}</f:if>
+                                </f:then>
+                                <f:else>
+                                    {person.firstname}
+                                </f:else>
+                            </f:if>
+                        </f:link.action>
                     </td>
                     <td>
                         <f:if condition="{person.categories}">
@@ -78,14 +80,6 @@
                             <i class="bi bi-phone-vibrate"></i>&nbsp;
                             {person.phoneMobile}
                         </f:if>
-                    </td>
-                    <td>
-                        <f:for each="{person.organizations}" as="organization" iteration="orgIterator">
-                            <f:link.action pageUid="19" action="show" controller="Organization"
-                                arguments="{organization: organization}">
-                                {organization.name -> f:format.crop(maxCharacters: 17)},<br />
-                            </f:link.action>
-                        </f:for>
                     </td>
                     <td>
                         <f:if condition="{person.organizations}">
